--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,18 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import Card from '../components/Card.astro';
 import Layout from '../layouts/Layout.astro';
+import { getCollection } from 'astro:content';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const events = await getCollection('events');
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="わにサークル">
+	<main>
+    <h1>わにサークルのイベント情報</h1>
+		<ul>
+			{events.map((event) => (
+				<Card event={event} />
+			))}	
+    	</ul>
+	</main>
 </Layout>
