--- a/src/pages/events/[...event].astro
+++ b/src/pages/events/[...event].astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../../layouts/Layout.astro';
+import Nav from '../../components/Nav.astro';
 import { getCollection } from 'astro:content';
 
 export async function getStaticPaths() {
@@ -15,6 +16,8 @@ const { Content } = await event.render();
 ---
 
 <Layout title={event.slug}>
+  <Nav/>
+  <br/>
   <h1>{event.data.title}</h1>
   <Content />
 </Layout>
