modified:applied whole color(test1)

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,2 +1,9 @@
 
-<a href="/">ホーム</a>
+<header>
+    <nav class="container mx-auto bg-primary-dark text-white p-4"">
+        <ul class="flex space-x-4">
+          <li><a href="/" class="hover:text-primary-light">Home</a></li>
+          <li><a href="/about" class="hover:text-primary-light">About</a></li>
+        </ul>
+    </nav>
+</header>
