--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Card from '../components/Card.astro';
+import Nav from '../components/Nav.astro';
 import Layout from '../layouts/Layout.astro';
 import { getCollection } from 'astro:content';
 
@@ -8,25 +8,27 @@ const sortedEvents = events.sort((a,b)=> new Date(a.data.date) - new Date(b.data
 ---
 
 <Layout title="わにサークル">
-	<main>
-		<h1>わにサークルのイベント情報</h1>
+  <Nav/>
+	<main class="container mx-auto bg-secondary-light">
+		
+		<h1 class="text-xl py-3">わにサークルのイベント情報</h1>
 		<div class="container mx-auto">
 			<ul class="grid grid-cols-1 md:grid-cols-3 gap-6">
 				{sortedEvents.map((event) => (
-					<div class="p-4">
-						<p>{event.data.title}</p>
-						{event.data.date}
+          <article class="bg-white rounded-lg shadow-md p-6">
+            <p>{event.data.title}</p>
+          {event.data.date}
 
-						<a
-						  href={`events/${event.slug}`}
-						  class="block"
-						>
-							<img
-						    src={event.data.image}
-							class="w-full h-48 object-cover"
-							/>
-						</a>
-					</div>
+          <a
+            href={`events/${event.slug}`}
+            class="block"
+          >
+            <img
+              src={event.data.image}
+            class="w-full h-48 object-cover"
+            />
+          </a>
+          </article>
 					// <Card event={event} />
 				))}	
 			</ul>
