--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const upcomingEvents = events
 		<h1 class="text-xl py-3">わにサークルのイベント情報</h1>
 		<div class="container mx-auto">
 			<ul class="grid grid-cols-1 md:grid-cols-3 gap-6">
-				{sortedEvents.map((event) => (
+				{upcomingEvents.map((event) => (
           <article class="bg-white rounded-lg shadow-md p-6">
             <p>{event.data.title}</p>
           {event.data.date}
