fixed:move to detail page

--- a/src/pages/events/[...event].astro
+++ b/src/pages/events/[...event].astro
@@ -3,6 +3,8 @@ import Layout from '../../layouts/Layout.astro';
 import Nav from '../../components/Nav.astro';
 import { getCollection } from 'astro:content';
 
+export const prerender = true;
+
 export async function getStaticPaths() {
   const events = await getCollection('events');
   return events.map(event => ({
